tests/parser/define-class.13.bad.error
error: Malformed class definition
  --> test:4:14
   |
 4 |  (define-class (C :a . :b))
   |                ^^^^^^^^^^^ unexpected dotted list
